# greedy_collector

./: .env.sample  README.md  docker-compose.yml  pyproject.toml
db/: init.sh
db/migrations/: announcements.sql
docker_files/: Dockerfile
security_notification_bot/: __main__.py
security_notification_bot/models/: announcement.py  database.py  discord.py  web_page.py
security_notification_bot/models/announcements/: ruby_on_rails.py
security_notification_bot/models/discords/: security.py
tests/: conftest.py
tests/models/: test_announcement.py  test_database.py
