[tool.poetry]
name = "security-notification-bot"
version = "0.1.0"
description = "セキュリティ関連の通知をDiscordに行うbot"
authors = ["koba-masa"]
license = "MIT"
readme = "README.md"
packages = [{include = "security_notification_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
discord-webhook = "^1.1.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.7"
psycopg2 = "^2.9.5"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
